--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==0.76.0
-numpy==1.24.3
-scipy==1.10.1
-protobuf==3.20.3
-scikit-learn==1.01
-pandas==1.4.4
-joblib==1.1.1
+streamlit
+numpy
+scipy
+protobuf
+scikit-learn
+pandas
+joblib
